Another Small Push
Pushed for Joseph so he can look into model importing issues.

--- a/applications/WebMod/views/default/profile.html
+++ b/applications/WebMod/views/default/profile.html
@@ -105,7 +105,7 @@
                               {% #if isShareable === false %}
                                  Sharing Disabled,
                               {% /if %}
-                              <a href="{{=URL('default', 'viewing')}}/{% model_id %}">Edit<br></a>
+                              <a href="{{=URL('default', 'modeling')}}/{% model_id %}/{% name %}" style="color:#D98200; text-decoration:none;">Edit<br></a>
                            </div>
                         </img>
                      <div>
@@ -190,7 +190,7 @@
                               {% #if isShareable === false %}
                                  Sharing Disabled,
                               {% /if %}
-                              <a href="{{=URL('default', 'viewing')}}/{% model_id %}">Edit<br></a>
+                              <a href="{{=URL('default', 'modeling')}}/{% model_id %}/{% name %}" style="color:#D98200; text-decoration:none;">Edit<br></a>
                            </div>
                         </img>
                      <div>
@@ -292,7 +292,7 @@
                               {% #if isShareable === false %}
                                  Sharing Disabled,
                               {% /if %}
-                              <a href="{{=URL('default', 'viewing')}}/{% model_id %}">Edit<br></a> 
+                              <a href="{{=URL('default', 'modeling')}}/{% model_id %}/{% name %}" style="color:#D98200; text-decoration:none;">Edit<br></a>
                            </div>
                         </img>
                      <div>
@@ -373,7 +373,7 @@
                               {% #if isShareable === false %}
                                  Sharing Disabled,
                               {% /if %}
-                              <a href="{{=URL('default', 'viewing')}}/{% model_id %}">Edit<br></a>
+                              <a href="{{=URL('default', 'modeling')}}/{% model_id %}/{% name %}" style="color:#D98200; text-decoration:none;">Edit<br></a>
                            </div>
                         </img>
                      <div>
